fix module name for AMD/UMD builds

--- a/test/manual.html
+++ b/test/manual.html
@@ -9,8 +9,8 @@
   <body>
     <script src="../dist/next-thing.js"></script>
     <script>
-      console.log('Module assigned to window.Next-thing. Logged below:')
-      console.log(Next-thing)
+      console.log('Module assigned to window.NextThing. Logged below:')
+      console.log(NextThing)
     </script>
   </body>
 </html>
